AspireApp1.AppHost/aspirate-output/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
