AspireApp1.AppHost/aspirate-output/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
spec:
  parentRefs:
  - name: my-gateway
  # hostnames:
  # - "*"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: webfrontend
      port: 60000
